2005-07-10  Gilles Chanteperdrix  <gilles.chanteperdrix@laposte.net>

	* skin/posix/lib/cond.c skins/posix/cond.c 
	(pse51_cond_timedwait_internal): Allow EINTR to be returned to
	user-space wrappers.
	(pthread_cond_*wait): Do not return EINTR to applications.

	* skins/posix/thread.c (pthread_join): Do not return EINTR,
	pthread_join is only called from kernel space.

	* skins/posix/mutex.c, skin/posix/lib/mutex.c
	(pthread_mutex_*lock): Do not let applications see the EINTR and
	EIDRM error codes.

	* skins/posix/mq.c (pse51_mq_timedsend_inner): Replace PSE51_RMID
	with XNRMID.

2005-07-10  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/shadow.c (gatekeeper_thread): Add a safety guard to
	prevent migrating Linux tasks just awaken by signals.

	* skins/posix (pthread_join, mutex_timedlock_internal): Add
	missing tests on XNBREAK and XNRMID conditions.

	* include/nucleus/queue.h: Rework debug macros to give better
	help upon bug detection.

	* nucleus/intr.c (xnintr_init): 
	* arch/generic/hal/generic.c (rthal_irq_request): Allow for
	installing a user-defined acknowledge routine.

2005-07-09  Philippe Gerum  <rpm@xenomai.org>

	* configure.in: Make -Wstrict-prototypes only part of the RTAI
	build flags for user-space components, excluding it from the
	common application flags returned by rtai-config.

	* nucleus/pod.c (xnpod_fatal_helper): Add PID information.

	* skins/posix/syscall.c (__mutex_init): Make all user-space
	mutexes recursive.

	* nucleus/shadow.c (xnshadow_harden): Make sure to be pulled out
	of the Linux runqueue, before the gatekeeper starts processing the
	shadow resumption request.

	* skins/posix/lib/thread.c (__pthread_trampoline): Fix race window
	between the parent release point and the actual use of the stacked
	start/cookie args.

2005-07-07  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-generic/hal.h: Discard Linux stage interrupt
	state manipulators: they are unused and are better not needed.
